fix: input file overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -269,7 +269,6 @@ img {
     margin: 0;
     opacity: 0;
     -ms-filter: 'alpha(opacity=0)';
-    font-size: 200px !important;
     direction: ltr;
     cursor: pointer;
 }
